Fix content hidden behind footer

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -41,11 +41,6 @@ main.layout.defaultLayout {
       min-height: -webkit-fill-available;
     }
 
-    @media (min-width: 1200px)
-    {
-      padding-bottom: 0;
-    }
-
     section.layout-content.layoutContent {
       display: flex;
       overflow: hidden;
